<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_BeamParamsReadback" Id="{ec5b142d-d58e-0a5e-0f3f-66f36655ee33}">
    <Declaration><![CDATA[TYPE ST_BeamParamsReadback :
STRUCT
	// Beam parameters
	
	//Note: fAtt is a local parameter, meaning it is distributed to the nearest
	// upstream attenuator component.
	fAtt : REAL := 100; //Current local attenuation

	//Machine parameters
	nBeamClass	:	BYTE := 16#F;
	nRate	:	UDINT	:= 10; //Pulse-rate
	fPP_mJ : REAL := 20; //Per pulse max energy (mJ)
	
	reV	:	REAL	:= 0; //Photon energy (calculated by undulator gap)
	
	xValidToggle	:	BOOL := FALSE; //Toggles when updated

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>