<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="F_DifferentBeamParams" Id="{4b2866e2-397b-0a58-04c2-840d09e73211}" SpecialFunc="None">
    <Declaration><![CDATA[(*Compares BeamParam1 to BeamParam2, if any parameters of BeamParam1 are different than BeamParam2
the result will be true *)
FUNCTION F_DifferentBeamParams : BOOL
VAR_INPUT
	BeamParam1	:	ST_BeamParams;
	BeamParam2	:	ST_BeamParams;
END_VAR
VAR
	// Internal Attenuation OK boolean
	xAttOK: BOOL := FALSE;
	// Internal Per-pulse energy OK boolean
	xPPmjOK: BOOL := FALSE;
	// Internal photon energy OK boolean
	xEvOK: BOOL := FALSE;
	xRateOK: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[xAttOK := BeamParam1.fAtt <> BeamParam2.fAtt;
xPPmjOK := BeamParam1.fPP_mJ <> BeamParam2.fPP_mJ;
xEvOK := BeamParam1.neVReqRange <> BeamParam2.neVReqRange;
xRateOK	 := BeamParam1.nRate <> BeamParam2.nRate;


F_DifferentBeamParams := xAttOK OR xPPmjOK OR xEvOK OR xRateOK;]]></ST>
    </Implementation>
    <LineIds Name="F_DifferentBeamParams">
      <LineId Id="8" Count="0" />
      <LineId Id="21" Count="1" />
      <LineId Id="39" Count="0" />
      <LineId Id="9" Count="1" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>