<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="F_SafeBPCompare" Id="{802803eb-2439-4113-8ed8-fad36423df22}" SpecialFunc="None">
    <Declaration><![CDATA[(*Compares BeamParam1 to BeamParam2: if the parameters of BeamParam1 are more conservative than BeamParam2
the result will be true. *)
FUNCTION F_SafeBPCompare : BOOL
VAR_INPUT
	BeamParam1	:	ST_BeamParams; //Must be more conservative than 2
	BeamParam2	:	ST_BeamParams;
END_VAR
VAR
	// Internal Attenuation OK boolean
	xAttOK: BOOL := FALSE;
	// Internal Per-pulse energy OK boolean
	xPPmjOK: BOOL := FALSE;
	// Internal photon energy OK boolean
	xEvOK: BOOL := FALSE;
	// Internal Beam Rate OK boolean
	xRateOK: BOOL;
	// Beam-rate is zero, masks all others considerations.
	xZeroRate: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[xAttOK := BeamParam1.fAtt >= BeamParam2.fAtt;
xPPmjOK := BeamParam1.fPP_mJ <= BeamParam2.fPP_mJ;
xEvOK := F_eVWithinSpec(BeamParam1.reV, BeamParam2.neVReqRange);
xZeroRate	:= BeamParam1.nRate = 0;
xRateOK	:= BeamParam1.nRate <= BeamParam2.nRate;

F_SafeBPCompare := xZeroRate OR (xAttOK AND xPPmjOK AND xEvOK AND xRateOK);]]></ST>
    </Implementation>
    <LineIds Name="F_SafeBPCompare">
      <LineId Id="60" Count="5" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>